--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,10 @@
 }
 
 .btn-wsp1 {
-  padding: 2px 2px 2px 2px;
-  width: 40px;
-  height: 40px;
+  border-radius: 50px;
+  padding: 6px 6px 6px 6px;
+  width: 37px;
+  height: auto;
   border-radius: 0px;
   line-height: 63px;
   margin-bottom: 22px;
@@ -33,4 +34,9 @@
   color: #FFF;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
+}
+.btn-wsp:hover, .btn-wsp1:hover {
+  text-decoration: none;
+  background: #fff;
+  color: #25d366;
 }
